<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    >
<RelativeLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pinkdress.MainActivity">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:scaleType="centerCrop"
    android:src="@drawable/dress"
    android:id="@+id/dress"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact Information"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:background="#f8bbdd"
        android:layout_below="@id/dress"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/contacttext"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact"
        android:layout_below="@id/contacttext"
        android:layout_marginLeft="32dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/sym_action_call"
            android:id="@+id/phone"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/phone"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/sym_action_email"
            android:id="@+id/email"
            android:layout_below="@id/phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/email"
            android:layout_below="@id/phone"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            app:srcCompat="@drawable/ic_language_black_24dp"
            android:id="@+id/webpage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:autoLink="web"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/webpage"
            android:layout_below="@id/email"
            android:textStyle="italic"
            android:id="@+id/web"
            />

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="More Information"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:background="#f8bbdd"
        android:layout_below="@id/contact"
        android:layout_marginLeft="16dp"
        android:id="@+id/moreinf"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/moreinf">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/moreinformation"
        android:layout_marginLeft="32dp"
        android:layout_below="@id/moreinf"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_favorite_black_24dp"
            android:id="@+id/description"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decription"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_toRightOf="@id/description"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moreinformation_address"
            android:layout_marginLeft="32dp"
            android:layout_below="@id/moreinformation"
            >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_room_black_24dp"
        android:id="@+id/location"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/location"
        />
</RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moreinformation_work_hours"
            android:layout_marginLeft="32dp"
            android:layout_below="@id/moreinformation_address"
            >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_work_black_24dp"
        android:id="@+id/work"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_toRightOf="@id/work"
        android:layout_margin="8dp"
        android:id="@+id/workhoures"
        />
    </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
</ScrollView>